[gd_scene load_steps=5 format=2]

[ext_resource path="res://Test/SpecialTabs.gd" type="Script" id=1]
[ext_resource path="res://Theme/1x1transparent.png" type="Texture" id=2]
[ext_resource path="res://Test/WindowDialog.gd" type="Script" id=3]
[ext_resource path="res://Art/ActionPoint.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 128.0
margin_top = 96.0
margin_right = 545.0
margin_bottom = 493.0
window_title = "T"
resizable = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpecialTabs" type="VBoxContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopTabsSection" type="HBoxContainer" parent="WindowDialog/SpecialTabs"]
margin_right = 417.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 1

[node name="TextureButtonLeft" type="TextureButton" parent="WindowDialog/SpecialTabs/TopTabsSection"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )

[node name="Tabs" type="Tabs" parent="WindowDialog/SpecialTabs/TopTabsSection"]
margin_left = 36.0
margin_right = 381.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_icons/increment = ExtResource( 2 )
custom_icons/decrement = ExtResource( 2 )
scrolling_enabled = false
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButtonRight" type="TextureButton" parent="WindowDialog/SpecialTabs/TopTabsSection"]
margin_left = 385.0
margin_right = 417.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/SpecialTabs"]
margin_top = 36.0
margin_right = 417.0
margin_bottom = 60.0

[node name="ColorRect" type="ColorRect" parent="WindowDialog/SpecialTabs/VBoxContainer"]
margin_right = 417.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="WindowDialog/SpecialTabs/VBoxContainer"]
margin_top = 4.0
margin_right = 417.0
margin_bottom = 24.0
text = "afdsfdsfd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="WindowDialog/SpecialTabs"]
margin_top = 64.0
margin_right = 417.0
margin_bottom = 64.0

[node name="ColorRect2" type="ColorRect" parent="WindowDialog/SpecialTabs/VBoxContainer2"]
margin_right = 417.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.580392, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="WindowDialog/SpecialTabs"]
margin_top = 68.0
margin_right = 417.0
margin_bottom = 68.0

[node name="ColorRect3" type="ColorRect" parent="WindowDialog/SpecialTabs/VBoxContainer3"]
margin_right = 417.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.141176, 0.14902, 0.713726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer4" type="VBoxContainer" parent="WindowDialog/SpecialTabs"]
margin_top = 72.0
margin_right = 417.0
margin_bottom = 72.0

[node name="ColorRect4" type="ColorRect" parent="WindowDialog/SpecialTabs/VBoxContainer4"]
margin_right = 417.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.796078, 0.886275, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer5" type="VBoxContainer" parent="WindowDialog/SpecialTabs"]
margin_top = 76.0
margin_right = 417.0
margin_bottom = 76.0

[node name="ColorRect4" type="ColorRect" parent="WindowDialog/SpecialTabs/VBoxContainer5"]
margin_right = 417.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.796078, 0.886275, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer6" type="VBoxContainer" parent="WindowDialog/SpecialTabs"]
margin_top = 80.0
margin_right = 417.0
margin_bottom = 80.0

[node name="ColorRect4" type="ColorRect" parent="WindowDialog/SpecialTabs/VBoxContainer6"]
margin_right = 417.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.796078, 0.886275, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer7" type="VBoxContainer" parent="WindowDialog/SpecialTabs"]
margin_top = 84.0
margin_right = 417.0
margin_bottom = 84.0

[node name="ColorRect4" type="ColorRect" parent="WindowDialog/SpecialTabs/VBoxContainer7"]
margin_right = 417.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.796078, 0.886275, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="WindowDialog/SpecialTabs/TopTabsSection/TextureButtonLeft" to="WindowDialog/SpecialTabs" method="_on_TextureButtonLeft_pressed"]
[connection signal="reposition_active_tab_request" from="WindowDialog/SpecialTabs/TopTabsSection/Tabs" to="WindowDialog/SpecialTabs" method="_on_Tabs_reposition_active_tab_request"]
[connection signal="tab_changed" from="WindowDialog/SpecialTabs/TopTabsSection/Tabs" to="WindowDialog/SpecialTabs" method="_on_Tabs_tab_changed"]
[connection signal="pressed" from="WindowDialog/SpecialTabs/TopTabsSection/TextureButtonRight" to="WindowDialog/SpecialTabs" method="_on_TextureButtonRight_pressed"]
